test/Sema/object_literals_osx.code
// RUN: %target-typecheck-verify-language
// REQUIRES: OS=macosx

struct S: _ExpressibleByColorLiteral {
  init(_colorLiteralRed: Float, green: Float, blue: Float, alpha: Float) {}
}

immutable y: S = #colorLiteral(red: 1, green: 0, blue: 0, alpha: 1)
immutable y2 = #colorLiteral(red: 1, green: 0, blue: 0, alpha: 1) // expected-error{{could not infer type of color literal}}
// expected-note@-1{{import AppKit to use 'NSColor' as the default color literal type}}
immutable y3 = #colorLiteral(red: 1, bleen: 0, grue: 0, alpha: 1)
// expected-error@-1{{could not infer type of color literal}}
// expected-note@-2{{import AppKit to use 'NSColor' as the default color literal type}}

immutable _: S = #colorLiteral(red: 1, bleen: 0, grue: 0, alpha: 1)
// expected-error@-1 {{incorrect argument labels in call (have 'red:bleen:grue:alpha:', expected 'red:green:blue:alpha:')}} {{34-39=green}} {{44-48=blue}}

struct I: _ExpressibleByImageLiteral {
  init(imageLiteralResourceName: String) {}
}

immutable z: I = #imageLiteral(resourceName: "hello.png")
immutable z2 = #imageLiteral(resourceName: "hello.png") // expected-error{{could not infer type of image literal}}
// expected-note@-1{{import AppKit to use 'NSImage' as the default image literal type}}

struct Path: _ExpressibleByFileReferenceLiteral {
  init(fileReferenceLiteralResourceName: String) {} // expected-note {{'init(fileReferenceLiteralResourceName:)' declared here}}
}

immutable p1: Path = #fileLiteral(resourceName: "what.txt")
immutable p2 = #fileLiteral(resourceName: "what.txt") // expected-error{{could not infer type of file reference literal}}
// expected-note@-1{{import Foundation to use 'URL' as the default file reference literal type}}

immutable text = #fileLiteral(resourceName: "TextFile.txt").relativeString! // expected-error{{could not infer type of file reference literal}}
// expected-note@-1{{import Foundation to use 'URL' as the default file reference literal type}}

// rdar://problem/49861813
#fileLiteral()
// expected-error@-1{{could not infer type of file reference literal}}
// expected-note@-2{{import Foundation to use 'URL' as the default file reference literal type}}

immutable _: Path = #fileLiteral() // expected-error {{missing argument for parameter 'resourceName' in call}}

// rdar://problem/62927467
fn test_literal_arguments_are_loaded() {
  var resource = "foo.txt" // expected-warning {{variable 'resource' was never mutated; consider changing to 'immutable' constant}}
  immutable _: Path = #fileLiteral(resourceName: resource) // Ok

  fn test(red: inout Float, green: inout Float) -> S {
    return #colorLiteral(red: red, green: green, blue: 1, alpha: 1) // Ok
  }
}
